flush out skeleton

--- a/Week 01/github/slides.html
+++ b/Week 01/github/slides.html
@@ -41,16 +41,33 @@
 <section id="github" class="slide level2">
 <h2>GitHub</h2>
 </section>
-<section id="your-turn" class="slide level2">
+<section id="your-turn" class="slide level2 yourturn">
 <h2>Your Turn</h2>
 <ol type="1">
-<li><p>Create a GitHub account</p>
-<p>link, screenshots, how to choose a name, etc.</p></li>
-<li><p>Create a hello-world repo</p></li>
+<li>Create a GitHub account</li>
+</ol>
+<p>link, screenshots, how to choose a name, etc.</p>
+<ol type="1">
+<li>Create a <code>hello-world</code> repo</li>
 </ol>
 </section>
 <section id="pushing-and-pulling-a-tug-of-war" class="slide level2">
 <h2>Pushing and pulling, a tug of war</h2>
+</section>
+<section id="sourcetree" class="slide level2">
+<h2>SourceTree</h2>
+<p>screencaps, etc.</p>
+</section>
+<section id="your-turn-1" class="slide level2 yourturn">
+<h2>Your Turn</h2>
+<ol type="1">
+<li>Edit the README file in your <code>hello-world</code> repo</li>
+<li>Commit and push changes</li>
+<li>Check out your commit history!</li>
+</ol>
+</section>
+<section id="collaboration" class="slide level2">
+<h2>Collaboration</h2>
 </section>
 
   <!--
