Yeah, I put GIFs in a presentation.

--- a/Week 01/course_intro/Intro_presentation.html
+++ b/Week 01/course_intro/Intro_presentation.html
@@ -27,6 +27,14 @@
 
     
   
+<section id="you-can-make-a-horse-drink" class="slide level2">
+<h2>You <em>can</em> make a horse drink</h2>
+<p><img src="images/drinkinghorse.gif" /></p>
+</section>
+<section id="but-there-are-better-ways-to-treat-a-horse" class="slide level2">
+<h2>But there are better ways to treat a horse</h2>
+<p><img src="images/happyhorse.gif" /></p>
+</section>
 <section id="why-we-are-having-this-course" class="slide level2">
 <h2>Why we are having this course</h2>
 <ul>
