Added worlds diagram and content to presentation

--- a/Week 01/course_intro/Intro_presentation.html
+++ b/Week 01/course_intro/Intro_presentation.html
@@ -35,8 +35,17 @@
 <h2>But there are better ways to treat a horse</h2>
 <p><img src="images/happyhorse.gif" /></p>
 </section>
-<section id="why-we-are-having-this-course" class="slide level2">
-<h2>Why we are having this course</h2>
+<section id="how-to-be-a-good-data-steward" class="slide level2">
+<h2>How to be a good data steward</h2>
+<ul>
+<li>Work in a style that encourages others to understand and reproduce what you did</li>
+<li>Document every step of the process</li>
+<li>Do not misplace or destroy your data</li>
+</ul>
+<p>Stewardship may seem altruistic, but the person to benefit the most will be you. Your future self will thank you.</p>
+</section>
+<section id="dont-forget" class="slide level2">
+<h2>Don’t forget</h2>
 <ul>
 <li>Reproducibility/Accountability</li>
 <li>Collaboration</li>
@@ -47,15 +56,19 @@
 </section>
 <section id="the-world-you-are-about-to-enter" class="slide level2">
 <h2>The world you are about to enter</h2>
-<ul>
-<li>Some history??? What is out there??</li>
-</ul>
+<p><img src="images/worldscollide.png" width="600px" /></p>
 </section>
 <section id="what-we-will-learn-in-this-course" class="slide level2">
 <h2>What we will learn in this course</h2>
 <ul>
 <li>Syllabus</li>
+<li>Homeworks</li>
+<li>Projects</li>
+<li></li>
 </ul>
+</section>
+<section id="introductions" class="slide level2">
+<h2>Introductions?</h2>
 </section>
 
   <!--
