--- a/Week 01/course_intro/Intro_presentation.html
+++ b/Week 01/course_intro/Intro_presentation.html
@@ -35,6 +35,24 @@
 <h2>But there are better ways to treat a horse</h2>
 <p><img src="images/happyhorse.gif" /></p>
 </section>
+<section id="why-data-stewardship-is-important" class="slide level2">
+<h2>Why data stewardship is important</h2>
+<ul>
+<li>A solid management plan is now required by federal agencies (NSF, NIFA)
+<ul>
+<li>Includes requirements for data storage, preservation, sharing, and public access</li>
+</ul></li>
+<li>You need to be considerate of your future self
+<ul>
+<li>Good stewardship will make you more efficient, faster, and powerful</li>
+</ul></li>
+<li>The most will be made of data that took a lot of time and money to collect
+<ul>
+<li>Your</li>
+</ul></li>
+<li>Personal efficiency</li>
+</ul>
+</section>
 <section id="how-to-be-a-good-data-steward" class="slide level2">
 <h2>How to be a good data steward</h2>
 <ul>
@@ -42,33 +60,37 @@
 <li>Document every step of the process</li>
 <li>Do not misplace or destroy your data</li>
 </ul>
-<p>Stewardship may seem altruistic, but the person to benefit the most will be you. Your future self will thank you.</p>
 </section>
-<section id="dont-forget" class="slide level2">
-<h2>Don’t forget</h2>
-<ul>
-<li>Reproducibility/Accountability</li>
-<li>Collaboration</li>
-<li>Data sharing with the world</li>
-<li>Required databases/data tracking (NSF/NIFA)</li>
-<li>Personal efficiency</li>
-</ul>
+<section id="learning-curve-and-attitude" class="slide level2">
+<h2>Learning curve and attitude</h2>
 </section>
-<section id="the-world-you-are-about-to-enter" class="slide level2">
-<h2>The world you are about to enter</h2>
+<section id="new-worlds" class="slide level2">
+<h2>New worlds</h2>
 <p><img src="images/worldscollide.png" width="600px" /></p>
 </section>
 <section id="what-we-will-learn-in-this-course" class="slide level2">
 <h2>What we will learn in this course</h2>
 <ul>
-<li>Syllabus</li>
-<li>Homeworks</li>
-<li>Projects</li>
-<li></li>
+<li>Course outline</li>
 </ul>
+</section>
+<section id="homeworks" class="slide level2">
+<h2>Homeworks</h2>
+<ul>
+<li>All GitHub</li>
+</ul>
+</section>
+<section id="course-project" class="slide level2">
+<h2>Course Project</h2>
+</section>
+<section id="getting-help" class="slide level2">
+<h2>Getting Help</h2>
 </section>
 <section id="introductions" class="slide level2">
 <h2>Introductions?</h2>
+</section>
+<section id="what-you-need-on-your-computer" class="slide level2">
+<h2>What you need on your computer</h2>
 </section>
 
   <!--
