First lecture is almost done

--- a/Week 01/course_intro/Intro_presentation.html
+++ b/Week 01/course_intro/Intro_presentation.html
@@ -35,22 +35,18 @@
 <h2>But there are better ways to treat a horse</h2>
 <p><img src="images/happyhorse.gif" /></p>
 </section>
-<section id="why-data-stewardship-is-important" class="slide level2">
-<h2>Why data stewardship is important</h2>
+<section id="a-few-reasons-data-stewardship-is-important" class="slide level2">
+<h2>A few reasons data stewardship is important</h2>
 <ul>
-<li>A solid management plan is now required by federal agencies (NSF, NIFA)
+<li>A solid data management plan is now required by federal agencies (NSF, NIFA)
 <ul>
 <li>Includes requirements for data storage, preservation, sharing, and public access</li>
 </ul></li>
-<li>You need to be considerate of your future self
+<li>Good stewardship will make you more efficient, faster, and powerful
 <ul>
-<li>Good stewardship will make you more efficient, faster, and powerful</li>
+<li>Be kind to your future self</li>
 </ul></li>
-<li>The most will be made of data that took a lot of time and money to collect
-<ul>
-<li>Your</li>
-</ul></li>
-<li>Personal efficiency</li>
+<li>The most will be made of data that took a lot of time and money to collect</li>
 </ul>
 </section>
 <section id="how-to-be-a-good-data-steward" class="slide level2">
@@ -60,37 +56,75 @@
 <li>Document every step of the process</li>
 <li>Do not misplace or destroy your data</li>
 </ul>
+<p>Many of us need new skills to be better stewards.</p>
 </section>
-<section id="learning-curve-and-attitude" class="slide level2">
-<h2>Learning curve and attitude</h2>
-</section>
-<section id="new-worlds" class="slide level2">
-<h2>New worlds</h2>
-<p><img src="images/worldscollide.png" width="600px" /></p>
+<section id="learning-curve-and-time" class="slide level2">
+<h2>Learning curve and time</h2>
+<ul>
+<li>Learning new skills is not easy
+<ul>
+<li>open mind</li>
+<li><strong>patience</strong></li>
+<li>determination</li>
+<li>committment</li>
+</ul></li>
+<li>Invest time now to save time later</li>
+</ul>
 </section>
 <section id="what-we-will-learn-in-this-course" class="slide level2">
 <h2>What we will learn in this course</h2>
 <ul>
-<li>Course outline</li>
+<li>Tools needed for collaborative workflow</li>
+<li>How to create good data</li>
+<li>How to structure and store data</li>
+<li>Tools and theories needed to efficiently work with data</li>
+<li>Data visualization</li>
+<li>How to make a reproducible and dynamic workflow</li>
+<li>How to get more data and work with special cases</li>
 </ul>
+</section>
+<section id="live-in-new-worlds-but-visit-the-old" class="slide level2">
+<h2>Live in new worlds, but visit the old</h2>
+<p><img src="images/worldscollide.png" width="600px" /></p>
 </section>
 <section id="homeworks" class="slide level2">
 <h2>Homeworks</h2>
 <ul>
-<li>All GitHub</li>
+<li>All homeworks will be submitted on GitHub and must be fully reproducible by the instructors</li>
+<li>Individual short exercises (25%)</li>
+<li>Group short exercises (25%)</li>
+<li>Blog posts (10%)</li>
 </ul>
+<p>Friday classes will be lab sessions, but we usually will not work on homework during lab</p>
 </section>
-<section id="course-project" class="slide level2">
-<h2>Course Project</h2>
+<section id="course-project-40" class="slide level2">
+<h2>Course Project – 40%</h2>
+<p>The final project will integrate everything from class.<br />
+* You will work in self-selected groups of 3-4<br />
+* The final result will be a reproducible story about data<br />
++Report and short presentation</p>
 </section>
 <section id="getting-help" class="slide level2">
 <h2>Getting Help</h2>
+<ol type="1">
+<li>The internet</li>
+</ol>
+<ul>
+<li>StackOverflow</li>
+<li>Google</li>
+</ul>
+<ol start="2" type="1">
+<li>Instructors via GitHub</li>
+</ol>
 </section>
 <section id="introductions" class="slide level2">
 <h2>Introductions?</h2>
 </section>
-<section id="what-you-need-on-your-computer" class="slide level2">
-<h2>What you need on your computer</h2>
+<section id="pre-course-evaluation" class="slide level2">
+<h2>Pre-course evaluation</h2>
+</section>
+<section id="the-computer-situation" class="slide level2">
+<h2>The computer situation</h2>
 </section>
 
   <!--
