--- a/Week 01/course_intro/Intro_presentation.html
+++ b/Week 01/course_intro/Intro_presentation.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="Intro_presentation_files/rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
-  <link rel="stylesheet" href="Intro_presentation_files/rmdshower/style-common.css">
-  <link rel="stylesheet" href="Intro_presentation_files/rmdshower/style-ribbon.css">
+  <link rel="stylesheet" href="Intro_presentation_files\rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
+  <link rel="stylesheet" href="Intro_presentation_files\rmdshower/style-common.css">
+  <link rel="stylesheet" href="Intro_presentation_files\rmdshower/style-ribbon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
-  <script src="Intro_presentation_files/rmdshower/auto-render.min.js" type="text/javascript"></script>
+  <script src="Intro_presentation_files\rmdshower/auto-render.min.js" type="text/javascript"></script>
   
   
   
@@ -27,15 +27,17 @@
 
     
   
-<section id="you-can-make-a-horse-drink" class="slide level2">
+<section id="welcome-to-data-stewardship-for-earth-systems-scientists" class="titleslide slide level1"><h2 class="shout">Welcome to Data Stewardship for Earth Systems Scientists</h2></section><section id="you-can-make-a-horse-drink" class="slide level2">
 <h2>You <em>can</em> make a horse drink</h2>
-<p><img src="images/drinkinghorse.gif" /></p>
-</section>
-<section id="but-there-are-better-ways-to-treat-a-horse" class="slide level2">
+<center>
+<img src="images/drinkinghorse.gif"/>
+</center>
+</section><section id="but-there-are-better-ways-to-treat-a-horse" class="slide level2">
 <h2>But there are better ways to treat a horse</h2>
-<p><img src="images/happyhorse.gif" /></p>
-</section>
-<section id="a-few-reasons-data-stewardship-is-important" class="slide level2">
+<center>
+<img src="images/happyhorse.gif"/>
+</center>
+</section><section id="a-few-reasons-data-stewardship-is-important" class="slide level2">
 <h2>A few reasons data stewardship is important</h2>
 <ul>
 <li>A solid data management plan is now required by federal agencies (NSF, NIFA)
@@ -46,19 +48,20 @@
 <ul>
 <li>Be kind to your future self</li>
 </ul></li>
-<li>The most will be made of data that took a lot of time and money to collect</li>
+<li>The most will be made of data that took a lot of time and money to collect
+<ul>
+<li>People want your data</li>
+</ul></li>
 </ul>
-</section>
-<section id="how-to-be-a-good-data-steward" class="slide level2">
+</section><section id="how-to-be-a-good-data-steward" class="slide level2">
 <h2>How to be a good data steward</h2>
 <ul>
 <li>Work in a style that encourages others to understand and reproduce what you did</li>
 <li>Document every step of the process</li>
 <li>Do not misplace or destroy your data</li>
 </ul>
-<p>Many of us need new skills to be better stewards.</p>
-</section>
-<section id="learning-curve-and-time" class="slide level2">
+<p>Many of us need new skills to be better stewards. Some of us need a lifestyle change.</p>
+</section><section id="learning-curve-and-time" class="slide level2">
 <h2>Learning curve and time</h2>
 <ul>
 <li>Learning new skills is not easy
@@ -70,8 +73,7 @@
 </ul></li>
 <li>Invest time now to save time later</li>
 </ul>
-</section>
-<section id="what-we-will-learn-in-this-course" class="slide level2">
+</section><section id="what-we-will-learn-in-this-course" class="slide level2">
 <h2>What we will learn in this course</h2>
 <ul>
 <li>Tools needed for collaborative workflow</li>
@@ -82,12 +84,12 @@
 <li>How to make a reproducible and dynamic workflow</li>
 <li>How to get more data and work with special cases</li>
 </ul>
-</section>
-<section id="live-in-new-worlds-but-visit-the-old" class="slide level2">
+</section><section id="live-in-new-worlds-but-visit-the-old" class="slide level2">
 <h2>Live in new worlds, but visit the old</h2>
-<p><img src="images/worldscollide.png" width="600px" /></p>
-</section>
-<section id="homeworks" class="slide level2">
+<center>
+<img src="images/worldscollide.png" width="700px" />
+</center>
+</section><section id="homeworks" class="slide level2">
 <h2>Homeworks</h2>
 <ul>
 <li>All homeworks will be submitted on GitHub and must be fully reproducible by the instructors</li>
@@ -96,15 +98,13 @@
 <li>Blog posts (10%)</li>
 </ul>
 <p>Friday classes will be lab sessions, but we usually will not work on homework during lab</p>
-</section>
-<section id="course-project-40" class="slide level2">
+</section><section id="course-project-40" class="slide level2">
 <h2>Course Project – 40%</h2>
 <p>The final project will integrate everything from class.<br />
 * You will work in self-selected groups of 3-4<br />
 * The final result will be a reproducible story about data<br />
 +Report and short presentation</p>
-</section>
-<section id="getting-help" class="slide level2">
+</section><section id="getting-help" class="slide level2">
 <h2>Getting Help</h2>
 <ol type="1">
 <li>The internet</li>
@@ -113,17 +113,14 @@
 <li>StackOverflow</li>
 <li>Google</li>
 </ul>
-<ol start="2" type="1">
+<ol type="1">
 <li>Instructors via GitHub</li>
 </ol>
-</section>
-<section id="introductions" class="slide level2">
+</section><section id="introductions" class="slide level2">
 <h2>Introductions?</h2>
-</section>
-<section id="pre-course-evaluation" class="slide level2">
+</section><section id="pre-course-evaluation" class="slide level2">
 <h2>Pre-course evaluation</h2>
-</section>
-<section id="the-computer-situation" class="slide level2">
+</section><section id="the-computer-situation" class="slide level2">
 <h2>The computer situation</h2>
 </section>
 
@@ -132,7 +129,7 @@
   just remove “progress” element.
   -->
   <!-- <div class="progress"></div> -->
-  <script src="Intro_presentation_files/rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
+  <script src="Intro_presentation_files\rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
   <!-- Copyright © 2015 Yours Truly, Famous Inc. -->
   <!-- Photos by John Carey, fiftyfootshadows.net -->
 
