--- a/Week 02/Reproducibility.html
+++ b/Week 02/Reproducibility.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Untitled</title>
+  <title>Reproducible Agronomy</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,7 +25,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Untitled',
+                title: 'Reproducible Agronomy',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -92,9 +92,7 @@
           </hgroup>
   </slide>
 
-<slide class=''><hgroup><h2>Reproducibilty</h2></hgroup><article  id="reproducibilty">
-
-</article></slide><slide class=''><hgroup><h2>Why</h2></hgroup><article  id="why">
+<slide class=''><hgroup><h2>Why</h2></hgroup><article  id="why">
 
 <ul>
 <li>If you have to do something once, you are going to have to do it 1000 times<br/></li>
@@ -110,6 +108,15 @@
 <ul>
 <li>If you can reproduce what you did, others can too<br/></li>
 <li>They can either use the information to perform similar analyses, or build upon all the work you did</li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>How, data collection</h2></hgroup><article  id="how-data-collection">
+
+<ul>
+<li>Reproducibility begins before you head to the field or lab<br/></li>
+<li>Establish a recorded protocol complete with references<br/>+Test if everyone can follow the protocol before they are left on their own<br/>+Bring the protocol with you to the field and record deviations<br/>Do not assume you will remember anything. Remembering indicates there is a piece of data that exists only in your head!<br/></li>
+<li>Take notes on anything that might be slightly relevant, but don&#39;t go overboard &#8211; you should have established most of the required information before you got to the field<br/></li>
+<li>Take pictures in the field/lab. . .you gotta</li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section"></article></slide>
