your turn and intros

--- a/week_01/course_intro/slides.html
+++ b/week_01/course_intro/slides.html
@@ -27,7 +27,20 @@
 
     
   
-<section id="welcome-to-data-stewardship-for-earth-systems-scientists" class="titleslide slide level1"><h2 class="shout">Welcome to Data Stewardship for Earth Systems Scientists</h2></section><section id="you-can-make-a-horse-drink" class="slide level2">
+<section id="welcome-to-data-stewardship-for-earth-systems-scientists" class="titleslide slide level1"><h2 class="shout">Welcome to Data Stewardship for Earth Systems Scientists</h2></section><section id="who-are-we" class="slide level2">
+<h2>Who are we?</h2>
+<div class="double">
+<p class="double-flow">
+<img src="images/andee_profile.png" class="one-col-image">
+</p>
+<p class="double-flow">
+<strong>Andee Kaplan</strong> is a PhD Student in Statistics with a history of working with complex data problems. From data warehousing to data science, she has spent the last seven years mastering the technology and skills necessary to store and analyze data in a reproducible way. She likes struggling with JavaScript and learning new languages, R being her first love.
+</p>
+</div>
+</section><section id="who-are-you" class="slide level2">
+<h2>Who are you?</h2>
+<p><img src="images/whoareyou.gif" alt="//" /></p>
+</section><section id="you-can-make-a-horse-drink" class="slide level2">
 <h2>You <em>can</em> make a horse drink</h2>
 <center>
 <img src="images/drinkinghorse.gif"/>
@@ -95,7 +108,10 @@
 <li>All homeworks will be submitted on GitHub and must be fully reproducible by the instructors</li>
 <li>Individual short exercises (25%)</li>
 <li>Group short exercises (25%)</li>
-<li>Blog posts (10%)</li>
+<li>Blog posts (10%)
+<ul>
+<li>Blog posts will be public upon completion (unless you talk to us first)</li>
+</ul></li>
 </ul>
 <p>Friday classes will be lab sessions, but we usually will not work on homework during lab</p>
 </section><section id="course-project-40" class="slide level2">
@@ -119,9 +135,6 @@
 </ul></li>
 <li>Instructors via GitHub</li>
 </ol>
-</section><section id="who-is-here" class="slide level2">
-<h2>Who is here?</h2>
-<p><img src="images/whoareyou.gif" alt="//" /></p>
 </section><section id="rstudio-and-rmarkdown" class="slide level2">
 <h2>RStudio and Rmarkdown</h2>
 <p>We won’t be learning <code>R</code> until the middle of the semester, but we will be using RStudio and Rmarkdown starting <strong>today</strong>!</p>
@@ -156,6 +169,32 @@
     - item 2b
     
 ![alt text](path/to/image.png)</code></pre>
+</section><section id="your-turn" class="slide level2 cover white">
+<h2>Your turn</h2>
+<!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
+<p><img src="images/your_turn.jpg" class="cover height"></p>
+<ol style="color: white">
+<li>
+Open up RStudio
+</li>
+<li>
+Create a new Rmarkdown document (<code>File &gt; New File &gt; R Markdown</code>)
+</li>
+<li>
+Edit it in some way.
+</li>
+<ul>
+<li>
+Try adding bold, italics, different headers, images, links, lists, etc.
+</li>
+</ul>
+<li>
+Compile (<code>Knit</code>)
+</li>
+<li>
+Try compiling to a different format.
+</li>
+</ol>
 </section><section id="pre-course-evaluation" class="slide level2">
 <h2>Pre-course evaluation</h2>
 <p><a href="https://goo.gl/forms/ZCUBnr0MBLk0TTXF2" class="uri">https://goo.gl/forms/ZCUBnr0MBLk0TTXF2</a></p>
