--- a/week_01/course_intro/slides.html
+++ b/week_01/course_intro/slides.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="slides_files/rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-common.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-ribbon.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-common.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-ribbon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
-  <script src="slides_files/rmdshower/auto-render.min.js" type="text/javascript"></script>
+  <script src="slides_files\rmdshower/auto-render.min.js" type="text/javascript"></script>
   
   
   
@@ -37,6 +37,13 @@
 <img src="images/andee_profile.png" class="one-col-image">
 </p>
 </div>
+</section><section id="who-are-we-1" class="slide level2">
+<h2>Who are we?</h2>
+<strong>Ranae Dietzel</strong> is a Postdoc in Agronomy in the Integrated Cropping Systems Lab. I have a Master’s in Soil Ecology from Cornell University where I studied the effects of freeze-thaw cycles on nitrous oxide emission and a PhD in Crop Production and Physiology and Sustainable Agriculture here at ISU where I studied differences in carbon dynamics between corn and prairie cropping systems. It’s been 10 years since I started grad school and began my relationship with Data.<br />
+
+<center>
+<img src="images/harfordprofile.jpg" width="200px" />
+</center>
 </section><section id="who-are-you" class="slide level2">
 <h2>Who are you?</h2>
 <p><img src="images/whoareyou.gif" alt="//" /></p>
@@ -205,7 +212,7 @@ Try compiling to a different format.
   just remove “progress” element.
   -->
   <!-- <div class="progress"></div> -->
-  <script src="slides_files/rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
+  <script src="slides_files\rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
   <!-- Copyright © 2015 Yours Truly, Famous Inc. -->
   <!-- Photos by John Carey, fiftyfootshadows.net -->
 
