Change slide order

--- a/week_01/course_intro/slides.html
+++ b/week_01/course_intro/slides.html
@@ -109,29 +109,10 @@
 <center>
 <img src="images/worldscollide.png" width="700px" />
 </center>
-</section><section id="homeworks" class="slide level2">
-<h2>Homeworks</h2>
-<ul>
-<li>All homeworks will be submitted on GitHub and must be fully reproducible by the instructors</li>
-<li>Individual short exercises (25%)</li>
-<li>Group short exercises (25%)</li>
-<li>Blog posts (10%)
-<ul>
-<li>Blog posts will be public upon completion (unless you talk to us first)</li>
-</ul></li>
-</ul>
-<p>Friday classes will be lab sessions, but we usually will not work on homework during lab</p>
-</section><section id="course-project-40" class="slide level2">
-<h2>Course Project – 40%</h2>
-<p>The final project will integrate everything from class.</p>
-<ul>
-<li>You will work in self-selected groups of 3-4<br />
-</li>
-<li>The final result will be a reproducible story about data
-<ul>
-<li>Report and short presentation</li>
-</ul></li>
-</ul>
+</section><section id="course-logistics" class="slide level2">
+<h2>Course Logistics</h2>
+<p>Everything will be at <a href="http://agron590-isu.github.io" class="uri">http://agron590-isu.github.io</a>.<br />
+Grades will be available on Blackboard.</p>
 </section><section id="getting-help" class="slide level2">
 <h2>Getting Help</h2>
 <ol type="1">
@@ -142,6 +123,10 @@
 </ul></li>
 <li>Instructors via GitHub</li>
 </ol>
+<p>Follow good question-asking practices as outlined by StackOverflow: <a href="http://stackoverflow.com/help/how-to-ask" class="uri">http://stackoverflow.com/help/how-to-ask</a> .</p>
+</section><section id="pre-course-evaluation" class="slide level2">
+<h2>Pre-course evaluation</h2>
+<p><a href="https://goo.gl/forms/ZCUBnr0MBLk0TTXF2" class="uri">https://goo.gl/forms/ZCUBnr0MBLk0TTXF2</a></p>
 </section><section id="rstudio-and-rmarkdown" class="slide level2">
 <h2>RStudio and Rmarkdown</h2>
 <p>We won’t be learning <code>R</code> until the middle of the semester, but we will be using RStudio and Rmarkdown starting <strong>today</strong>!</p>
@@ -202,9 +187,6 @@ Compile (<code>Knit</code>)
 Try compiling to a different format.
 </li>
 </ol>
-</section><section id="pre-course-evaluation" class="slide level2">
-<h2>Pre-course evaluation</h2>
-<p><a href="https://goo.gl/forms/ZCUBnr0MBLk0TTXF2" class="uri">https://goo.gl/forms/ZCUBnr0MBLk0TTXF2</a></p>
 </section>
 
   <!--
