--- a/week_01/github/slides.html
+++ b/week_01/github/slides.html
@@ -69,11 +69,17 @@
 <p>There are many hosting services for remote repositories (<a href="github.com">GitHub</a>, <a href="bitbucket.org">Bitbucket</a>, <a href="about.gitlab.com">GitLab</a>, etc.). We will use GitHub in this class, but the ideas carry over to the other services.</p>
 <p>By default, all materials on GitHub are <strong>public</strong>. This is <em>good</em> because you are getting your work out there and contributing to the open source community!</p>
 <p>If you need <strong>private</strong> repos, checkout <a href="https://education.github.com/">GitHub for Education</a> - free private repos for students/postdocs/professors.</p>
-<p><img src="images/daftpunktocat-guy.gif" height="100px" align="middle"/></p>
+<center>
+<img src="images/daftpunktocat-guy.gif" height="100px"/>
+</center>
 </section>
 <section id="creating-repos" class="slide level2">
 <h2>Creating Repos</h2>
-<p>Readme, .gitignore, license</p>
+<ol type="1">
+<li><img src="images/creating1.png" width="90%" style="vertical-align: top" /></li>
+<li><img src="images/creating2.png" width="50%" style="vertical-align: top"/></li>
+</ol>
+<p>Initialize readme (yes), .gitignore (<code>R</code> usually), license (e.g. GPL 3)</p>
 </section>
 <section id="your-turn" class="slide level2 cover white">
 <h2>Your Turn</h2>
@@ -100,6 +106,41 @@ Create a <code>hello-world</code> repo
 <li>
 E-mail me your GitHub username so that I can add you to our class organization (<a href="mailto:ajkaplan@iastate.edu" style="color: black">ajkaplan@iastate.edu</a>)
 </li>
+</section>
+<section id="creating-repos-contd" class="slide level2">
+<h2>Creating Repos (Cont’d)</h2>
+<div class="double">
+<strong>From scratch</strong>
+<ol>
+<li>
+Create the repo on the GitHub website
+</li>
+<li>
+Clone the repo
+</li>
+<li>
+Start working
+</li>
+<li>
+Add files, commit, push, etc.
+</li>
+</ol>
+<br/> <strong>From existing folder</strong>
+<ol>
+<li>
+Create the repo on the GitHub website
+</li>
+<li>
+Clone the repo
+</li>
+<li>
+Copy existing work into local folder
+</li>
+<li>
+Add files, commit, push, etc.
+</li>
+</ol>
+</div>
 </section>
 <section id="pushing-and-pulling-a-tug-of-war" class="slide level2">
 <h2>Pushing and pulling, a tug of war</h2>
@@ -149,6 +190,10 @@ Check out your commit history!
 </section>
 <section id="forking-a-repo" class="slide level2">
 <h2>Forking A (repo)</h2>
+</section>
+<section id="acheiving-that-pr" class="slide level2">
+<h2>Acheiving that PR</h2>
+<p>No, not <strong>p</strong>ersonal <strong>r</strong>ecord… <strong>p</strong>ull <strong>r</strong>equest!</p>
 </section>
 <section id="blog-assignment" class="slide level2">
 <h2>Blog assignment</h2>
