Finished spreadsheet content

--- a/week_02/reproducibility.html
+++ b/week_02/reproducibility.html
@@ -222,6 +222,23 @@ More on tidy data later</li>
 </li>
 <li><strong>Short, but meaningful</strong></li>
 </ul>
+</section><section id="make-backups" class="slide level2">
+<h2>Make backups</h2>
+<ul>
+<li>Best policy is three locations<br />
+</li>
+<li>One local (hard drive/server)</li>
+<li>One off-site (GitHub)<br />
+</li>
+<li>Another one off-site, preferably hosted in a different region (Dropbox, Cybox)</li>
+</ul>
+</section><section id="save-data-in-plain-text-files" class="slide level2">
+<h2>Save data in plain text files</h2>
+<ul>
+<li>This is a non-proprietary format, so anyone can open it at any point in the future</li>
+</ul>
+</section><section id="section" class="slide level2">
+<h2></h2>
 </section><section id="further-resources" class="slide level2">
 <h2>Further resources</h2>
 <p>(<a href="https://github.com/datacarpentry/spreadsheet-ecology-lesson/blob/gh-pages/02-common-mistakes.md#tables" class="uri">https://github.com/datacarpentry/spreadsheet-ecology-lesson/blob/gh-pages/02-common-mistakes.md#tables</a>)</p>
